tests/rosetta/transpiler/erl/deepcopy-1.error
exit status 127
escript: exception error: no case clause matching #{1 => true}
  in function  main:'-cdsstr/1-Fun_4_loop/6-1-'/6 (/workspace/mochi/tests/rosetta/transpiler/erl/deepcopy-1.erl, line 95)
  in call from main:cdsstr/1 (/workspace/mochi/tests/rosetta/transpiler/erl/deepcopy-1.erl, line 108)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/deepcopy-1.erl, line 118)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3 
